# project-template-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
nginx/: default.conf.template
src/project_template/: asgi.py  settings.py  urls.py  wsgi.py
src/user/: adapters.py  views.py
